chevereto-kustomize/overlays/prod/db-endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: db
subsets:
- addresses:
    - ip: 10.0.2.15
  ports:
    - port: 32768
