chevereto-kustomize/overlays/prod/db-service_patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  ports:
  - port: 3306
    targetPort: 32770
